feat: Better OpenAPI Generation (#52)
